--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <img src="images/ic_info_outline_black_24dp.svg" />
   </a>
 
+  <div id="loading-indicator" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #eee">
+    <img src="images/loading.gif" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)" />
+  </div>
+
   <script>
     WebVRConfig = {
       BUFFER_SCALE: 0.5,
