--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     };
   </script>
 
-  <script src="build/three.js"></script>
-  <script src="build/embed.js"></script>
+  <script src="build/three.min.js"></script>
+  <script src="build/embed.min.js"></script>
 </body>
 
 </html>
